# apps/api/src/boxlite-rest/mappers/box-to-box.mapper.ts
@@ -42,6 +42,7 @@ export function createBoxToCreateBox(dto: RestCreateBoxDto, target?: string): Cr
   createDto.memory = dto.memory_mib ? Math.ceil(dto.memory_mib / 1024) : undefined
   createDto.disk = dto.disk_size_gb
   createDto.target = target
+  createDto.captureLogs = dto.capture_logs
   createDto.autoPause = dto.auto_pause
   createDto.autoDelete = dto.auto_delete
   createDto.autoResume = dto.auto_resume
