# apps/runner/pkg/api/docs/swagger.json
@@ -1216,6 +1216,9 @@
         "authToken": {
           "type": "string"
         },
+        "captureLogs": {
+          "type": "boolean"
+        },
         "cpuQuota": {
           "type": "integer",
           "minimum": 1
@@ -1380,6 +1383,9 @@
       "properties": {
         "backupErrorReason": {
           "type": "string"
+        },
+        "captureLogs": {
+          "type": "boolean"
         },
         "cpuQuota": {
           "type": "integer",
